--- a/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.css
+++ b/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.css
@@ -1,7 +1,12 @@
-.row{
-    margin-bottom: 190px;
-}
+
 .devideLine{
     border: 5px solid black;
     margin-top: 200px;
+}
+#searchBtn{
+    float: right;
+}
+
+.mat-radio-button{
+    margin: 0px 60px 0px 0px;
 }
