--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -123,6 +123,18 @@
     <div dir="rtl">
         <mat-table [dataSource]="dataSource" class="mat-elevation-z8" [formGroup]="tableEmails">
             <!-- Position Column -->
+            <ng-container matColumnDef="delete">
+                <mat-header-cell *matHeaderCellDef
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;">מחיקת פנייה
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                        color="warn" (click)="deleteInquiry(element.EmailID)"
+                        *ngIf="UserName == 'matias' || UserName == 'miruach'"><span class="material-icons">
+                            delete
+                        </span></button> </mat-cell>
+            </ng-container>
+
+            <!-- Position Column -->
             <ng-container matColumnDef="FormID">
                 <mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מס' פניה
@@ -196,7 +208,8 @@
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;">
                     <mat-slide-toggle [checked]="element.Status" (change)="changeStatus($event,element.EmailID)"
-                        *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="פתיחת/סגירת פניה"></mat-slide-toggle>
+                        *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="פתיחת/סגירת פניה">
+                    </mat-slide-toggle>
                 </mat-cell>
             </ng-container>
 
@@ -206,7 +219,8 @@
                 matTooltip="{{row.ContentToShow}}"></mat-row>
         </mat-table>
         <button (click)="openDialogToManageEmail(0,0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"
-            *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="הוספת פנייה חדשה"><i class="material-icons">add</i></button>
+            *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="הוספת פנייה חדשה"><i
+                class="material-icons">add</i></button>
         <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
