--- a/src/app/fill-report/fill-report.component.css
+++ b/src/app/fill-report/fill-report.component.css
@@ -32,9 +32,9 @@
     border: 1px solid black;
     border-radius: 0px 10px 10px 0px; */
 }
-#addReply{
+/* #addReply{
     bottom: -95px;
-}
+} */
 
 h5{
     float: right;
