--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -5,19 +5,25 @@
                 {{date2}} - {{time2}} - {{userFullName}}
             </div>
             <div class="col">
-                <button matTooltip="שליחה לנמען" mat-raised-button type="button" class="btn btn-primary btn-raised float-left"
-                    (click)="openShareDialog()">
+                <button matTooltip="שליחה לנמען" mat-raised-button type="button"
+                    class="btn btn-primary btn-raised float-left" (click)="openShareDialog()">
                     <span class="material-icons">
                         reply
                     </span>
                 </button>
             </div>
-
-
         </div>
     </div>
     <div class="modal-body">
-        <div class="row">
+        <div class="row" *ngIf="reportType == 'clinical'">
+            <div class="col-12">
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>אבחנה</mat-label>
+                    <textarea matInput formControlName="Diagnosis" placeholder="אבחנה"></textarea>
+                  </mat-form-field>
+            </div>
+        </div>
+        <div class="row" *ngIf="reportType == 'administrative'">
             <div class="col">
                 <div class="form-group">
                     <mat-form-field>
@@ -36,11 +42,13 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>קטגוריה</mat-label>
-                        <mat-select formControlName="ReportCategory">
-                            <mat-option *ngFor="let cat of all_categories_filter" [value]="cat.Cat_Name">
+                        <input type="text" aria-label="category" matInput [formControl]="categoryfilter"
+                            [matAutocomplete]="auto3">
+                        <mat-autocomplete #auto3="matAutocomplete">
+                            <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name">
                                 {{cat.Cat_Name}}
                             </mat-option>
-                        </mat-select>
+                        </mat-autocomplete>
                     </mat-form-field>
                 </div>
             </div>
@@ -48,11 +56,13 @@
                 <div class="form-group">
                     <mat-form-field>
                         <mat-label>תת קטגוריה</mat-label>
-                        <mat-select formControlName="ReportSubCategory">
-                            <mat-option *ngFor="let tp of subCategory" [value]="tp.SubCat_Name">
-                                {{tp.SubCat_Name}}
+                        <input type="text" aria-label="subcategory" matInput [formControl]="subcategoryfilter"
+                            [matAutocomplete]="auto4">
+                        <mat-autocomplete #auto4="matAutocomplete">
+                            <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name">
+                                {{subcat.SubCat_Name}}
                             </mat-option>
-                        </mat-select>
+                        </mat-autocomplete>
                     </mat-form-field>
                 </div>
             </div>
@@ -98,7 +108,7 @@
         <div class="row">
             <div class="col-11">
                 <h5>תגובות:</h5>
-                <div class="expantionBox">
+                <div class="expantionBox" *ngIf="usersReponsesList?.length > 0">
                     <mat-accordion class="mat-accordion">
                         <div *ngFor="let response of usersReponsesList">
                             <mat-expansion-panel *ngIf="response.FirstName != ''" (opened)="panelOpenState = true"
