--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -1,5 +1,10 @@
+.my-container{
+  background-color: aliceblue;
+}
+
 table {
     width: 100%;
+    background-color: aliceblue;
   }
 
   #EventBtn{
@@ -14,6 +19,7 @@ table {
     border-bottom-width: 1px;
     border-bottom-style: solid;
     font-size: 20px;
+    background-color: floralwhite;
 }
 [dir=rtl] th.mat-header-cell {
     text-align: center;
@@ -33,10 +39,13 @@ table {
 #list_of_types{
   display: inline-flex;
 }
+#buffer{
+  background-color: blue;
+}
 
-/* #table-overflow{
-  overflow: auto;
-} */
+#table-overflow{
+  background-color: aliceblue;
+}
 
 /* #EventBtnnew{
   border-radius: 0px 20px 20px 0px;
@@ -49,4 +58,17 @@ table {
 #generalClinicalBtn{
   float: left;
   margin-left: 30px;
+}
+
+#releasedBtn{
+  float: left;
+  margin-left: 30px;
+}
+
+#details-btn{
+  background-color: papayawhip;
+  color: black;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: 18px;
 }
