--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-card dir="rtl" id="page-toshow" style="background-color: aliceblue;padding-top: 0px;">
-    <h1 class="page-title text-center">מערכת דיווח אחיות</h1>
+    <h1 class="page-title text-center">דיווח סיעודי</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <button matTooltip="דווח מינהלי" type="button" id="EventBtndisplay" mat-fab color="primary"
+            <button matTooltip="דווח מינהלי" id="EventBtndisplay" mat-raised-button type="submit" class="btn btn-primary btn-raised"
                 (click)="openReportDialog('administrative')">
                 <i class="material-icons">assignment_ind</i>
             </button>
