--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar mode="indeterminate" *ngIf="!progressBarNumbers"></mat-progress-bar>
+<mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!progressBarNumbers"></mat-progress-bar>
 <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 </button>
@@ -38,7 +38,7 @@
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay1"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay1;"></tr>
     </table>
-    <button type="button" class="mt-2" mat-fab color="primary" matTooltip="שמירה" (click)="getSubmitChanges('1')">
+    <button mat-raised-button type="submit" class="btn btn-primary btn-raised mt-2" matTooltip="שמירה" (click)="getSubmitChanges('1')">
         <i class="material-icons">save</i>
     </button>
     <!-- <div class="row p-3">
@@ -97,12 +97,12 @@
         </ng-container>
 
         <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> תאריך לידה (תינוק) </th>
+            <th mat-header-cell *matHeaderCellDef> תאריך לידה </th>
             <td mat-cell *matCellDef="let element"> {{element.H_DOB}} </td>
         </ng-container>
 
         <ng-container matColumnDef="time">
-            <th mat-header-cell *matHeaderCellDef> שעת לידה (תינוק) </th>
+            <th mat-header-cell *matHeaderCellDef> שעת לידה </th>
             <td mat-cell *matCellDef="let element"> {{element.H_DOB_TIME}} </td>
         </ng-container>
 
@@ -143,7 +143,7 @@
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay2;"></tr>
     </table>
     <hr>
-    <h4>רשימת מטופלים בחדר ניתוח <b>
+    <h4>תוכנית ניתוחים <b>
         </b></h4>
     <div dir="rtl">
         <mat-form-field class="float-right text-right" appearance="standard">
@@ -211,44 +211,34 @@
     <h4><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource5" mat-table class="mat-elevation-z8" style="width: 100%;">
 
-        <ng-container matColumnDef="adult">
-            <th mat-header-cell *matHeaderCellDef> מבוגרים </th>
+        <ng-container matColumnDef="all">
+            <th mat-header-cell *matHeaderCellDef> הכל </th>
             <td mat-cell *matCellDef="let element"><button type="button"
-                    (click)="getOtherDepartmentPatients('ADULTS','0',$event)" matTooltip="מטופלים במצטבר"
+                    (click)="getOtherDepartmentPatients('ALL','0',$event)" matTooltip="מטופלים במצטבר"
                     mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
-                    {{element.ADULTS}}
+                    {{element.ALL}}
                 </button>
                 <button type="button" style="background-color: aquamarine;"
-                    (click)="getOtherDepartmentPatients('ADULTS','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    (click)="getOtherDepartmentPatients('ALL','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
-                    {{element.ADULTSNOW}}
+                    {{element.ALLNOW}}
                 </button>
             </td>
         </ng-container>
-        <ng-container matColumnDef="child">
-            <th mat-header-cell *matHeaderCellDef> ילדים </th>
+        <ng-container matColumnDef="shockroom">
+            <th mat-header-cell *matHeaderCellDef> חדר הלם </th>
             <td mat-cell *matCellDef="let element"><button type="button"
-                    (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
-                    {{element.CHILDREN}}
+                    (click)="getOtherDepartmentPatients('HELEM','0',$event)" matTooltip="מטופלים במצטבר"
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
+                    {{element.HELEM}}
                 </button> <button type="button" style="background-color: aquamarine;"
-                    (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    (click)="getOtherDepartmentPatients('HELEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
-                    {{element.CHILDRENNOW}}
+                    {{element.HELEMNOW}}
                 </button></td>
         </ng-container>
-        <ng-container matColumnDef="women">
-            <th mat-header-cell *matHeaderCellDef> נשים </th>
-            <td mat-cell *matCellDef="let element"><button type="button"
-                    (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
-                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);">
-                    {{element.WOMEN}}
-                </button> <button type="button" style="background-color: aquamarine;"
-                    (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
-                    mat-raised-button>
-                    {{element.WOMENNOW}}
-                </button></td>
-        </ng-container>
+        
+        
         <ng-container matColumnDef="lyingdown">
             <th mat-header-cell *matHeaderCellDef> שוכבים </th>
             <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
@@ -273,18 +263,31 @@
                     {{element.MEHALKHEMNOW}}
                 </button></td>
         </ng-container>
-        <ng-container matColumnDef="shockroom">
-            <th mat-header-cell *matHeaderCellDef> חדר הלם </th>
+        <ng-container matColumnDef="women">
+            <th mat-header-cell *matHeaderCellDef> נשים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
-                    (click)="getOtherDepartmentPatients('HELEM','0',$event)" matTooltip="מטופלים במצטבר"
-                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
-                    {{element.HELEM}}
+                    (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
+                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);">
+                    {{element.WOMEN}}
                 </button> <button type="button" style="background-color: aquamarine;"
-                    (click)="getOtherDepartmentPatients('HELEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
-                    {{element.HELEMNOW}}
+                    {{element.WOMENNOW}}
                 </button></td>
         </ng-container>
+        <ng-container matColumnDef="child">
+            <th mat-header-cell *matHeaderCellDef> ילדים </th>
+            <td mat-cell *matCellDef="let element"><button type="button"
+                    (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
+                    {{element.CHILDREN}}
+                </button> <button type="button" style="background-color: aquamarine;"
+                    (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
+                    {{element.CHILDRENNOW}}
+                </button></td>
+        </ng-container>
+        
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay3"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay3;"></tr>
@@ -293,6 +296,7 @@
     <hr>
     <h4 *ngIf="ICUDetails">רשימת מטופלים<b>
         </b></h4>
+        <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!IcuPatientsBar"></mat-progress-bar>
     <div dir="rtl">
         <mat-form-field appearance="standard" *ngIf="ICUDetails">
             <mat-label>סינון</mat-label>
