--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="close" matTooltip="סגירה" *ngIf="asDialog" aria-label="Close" (click)="closeModal()">
+<button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 </button>
 <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
