--- a/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
+++ b/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
@@ -38,6 +38,47 @@
             </google-chart>
         </div>
         <div class="col">
+            <form [formGroup]="barSearchForm">
+                <div class="row">
+                    <!-- <div class="col">
+                        <mat-form-field appearance="fill">
+                            <mat-label>שנה</mat-label>
+                            <mat-select formControlName="barYears">
+                                <mat-option *ngFor="let year of years" [value]="year">
+                                    {{year}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div> -->
+                    <div class="col">
+                        <mat-form-field appearance="fill">
+                            <mat-label>מחלקה</mat-label>
+                            <mat-select formControlName="barDepartments">
+                                <mat-option *ngFor="let dept of departments" [value]="dept.value">
+                                    {{dept.viewValue}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div class="col">
+                        <button id="searchBtn" mat-raised-button type="submit" (click)="getBarChart()"
+                            class="btn btn-primary btn-raised">
+                            <span class="material-icons">
+                                search
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+            <google-chart #chart [title]="Bartitle" [type]="Bartype" [data]="Bardata" [options]="Baroptions"
+                [width]="Barwidth" [height]="Barheight">
+            </google-chart>
+            
+        </div>
+    </div>
+    <hr class="devideLine">
+    <div class="row" style="margin-bottom: 190px;">
+        <div class="col">
             <form [formGroup]="pieSearchForm">
                 <div class="row">
                     <div class="col">
@@ -80,53 +121,13 @@
                 [width]="Piewidth" [height]="Pieheight">
             </google-chart>
         </div>
-    </div>
-    <hr class="devideLine">
-    <div class="row" style="margin-bottom: 190px;">
         <div class="col">
-            <form [formGroup]="barSearchForm">
-                <div class="row">
-                    <!-- <div class="col">
-                        <mat-form-field appearance="fill">
-                            <mat-label>שנה</mat-label>
-                            <mat-select formControlName="barYears">
-                                <mat-option *ngFor="let year of years" [value]="year">
-                                    {{year}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div> -->
-                    <div class="col">
-                        <mat-form-field appearance="fill">
-                            <mat-label>מחלקה</mat-label>
-                            <mat-select formControlName="barDepartments">
-                                <mat-option *ngFor="let dept of departments" [value]="dept.value">
-                                    {{dept.viewValue}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                    <div class="col">
-                        <button id="searchBtn" mat-raised-button type="submit" (click)="getBarChart()"
-                            class="btn btn-primary btn-raised">
-                            <span class="material-icons">
-                                search
-                            </span>
-                        </button>
-                    </div>
-                </div>
-            </form>
-            <google-chart #chart [title]="Bartitle" [type]="Bartype" [data]="Bardata" [options]="Baroptions"
-                [width]="Barwidth" [height]="Barheight">
-            </google-chart>
-        </div>
-        <div class="col">
-            <form [formGroup]="barSearchForm">
+            <form [formGroup]="pieSearchForm2">
                 <div class="row">
                     <div class="col">
                         <mat-form-field appearance="fill">
                             <mat-label>שנה</mat-label>
-                            <mat-select formControlName="barYears">
+                            <mat-select formControlName="pieYears2">
                                 <mat-option *ngFor="let year of years" [value]="year">
                                     {{year}}
                                 </mat-option>
@@ -136,7 +137,7 @@
                     <div class="col">
                         <mat-form-field appearance="fill">
                             <mat-label>מחלקה</mat-label>
-                            <mat-select formControlName="barDepartments">
+                            <mat-select formControlName="pieDepartments2">
                                 <mat-option *ngFor="let dept of departments" [value]="dept.value">
                                     {{dept.viewValue}}
                                 </mat-option>
@@ -144,7 +145,7 @@
                         </mat-form-field>
                     </div>
                     <div class="col">
-                        <button id="searchBtn" mat-raised-button type="submit" (click)="getBarChart()"
+                        <button id="searchBtn" mat-raised-button type="submit" (click)="getPieChart2()"
                             class="btn btn-primary btn-raised">
                             <span class="material-icons">
                                 search
@@ -152,9 +153,15 @@
                         </button>
                     </div>
                 </div>
+                <div class="row">
+                    <mat-radio-group formControlName="piePercentSearch2" (change)="getPieChart2()">
+                        <mat-radio-button value="inquiries">אחוז מתוך סה"כ פניות</mat-radio-button>
+                        <mat-radio-button value="patients">אחוז מתוך סה"כ מטופלים במחלקה</mat-radio-button>
+                      </mat-radio-group>
+                </div>
             </form>
-            <google-chart #chart [title]="Bartitle" [type]="Bartype" [data]="Bardata" [options]="Baroptions"
-                [width]="Barwidth" [height]="Barheight">
+            <google-chart #chart [title]="Pietitle2" [type]="Pietype2" [data]="Piedata2" [options]="Pieoptions2"
+                [width]="Piewidth2" [height]="Pieheight2">
             </google-chart>
         </div>
     </div>
