--- a/src/app/nurses-dashboard/nurses-dashboard.component.css
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.css
@@ -28,9 +28,6 @@ table {
   height: 317px;
 } */
 
-h2{
-  text-align: center;
-}
   tr.example-element-row:not(.example-expanded-row):hover {
     background: whitesmoke;
   }
@@ -126,7 +123,7 @@ h2{
 
 .close {
   float: right;
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
@@ -149,8 +146,9 @@ h2{
 }
 
 h2{
+  text-align: center;
   padding: 6px;
-  margin-left: 25px;
+  margin: auto;
 }
 #formBody{
   border-style: outset;
@@ -158,5 +156,8 @@ h2{
 }
 
 h3{
-  margin-left: 25px;
+  margin: auto;
+}
+h1{
+  margin: auto;
 }
