--- a/src/app/visitors-monitoring/visitors-monitoring.component.html
+++ b/src/app/visitors-monitoring/visitors-monitoring.component.html
@@ -11,6 +11,21 @@
                     </mat-card>
                 </div>
             </div>
+            <hr>
+            <div class="row">
+                <h3>רשימת מבקרים פעילים</h3>
+            </div>
+            <div class="row">
+                <div class="col-3" *ngFor="let visitor of all_visitors_array">
+                    <mat-card class="card dash-cards m-2 p-2 text-center"
+                        (click)="unRegisterVisitor(visitor.PM_CASE_NUMBER ,visitor.VisitorName)"
+                        style="background-color: firebrick;">
+                        <div class="list-style text-center" style="font-size: 30px;font-weight: bold;">
+                            {{visitor.VisitorName}}
+                        </div>
+                    </mat-card>
+                </div>
+            </div>
         </div>
     </div>
 </mat-card>
