--- a/src/app/fill-report/fill-report.component.css
+++ b/src/app/fill-report/fill-report.component.css
@@ -12,9 +12,14 @@
 #display-line{
     border: 5px solid #1976d2;
 }
+.material-icons{
+    font-size: 18px;
+}
 
 #BtnStyle{
     box-shadow: 3px 4px 3px 0px black;
+    min-width: 50px;
+    line-height: 30px;
 }
 
 #formBody{
@@ -27,15 +32,15 @@
 .expantionBox{
     overflow: auto;
     width: 100%;
-    height: 132px;  
-    /* padding: 10px 20px 70px 20px;
-    border: 1px solid black;
-    border-radius: 0px 10px 10px 0px; */
+    height: 132px;
 }
-/* #addReply{
-    bottom: -95px;
-} */
 
 h5{
     float: right;
+}
+h6{
+    float: right;
+}
+.reply-row{
+    border-bottom: 3px solid grey;
 }
