--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -145,7 +145,7 @@
                     </mat-expansion-panel>
                 </mat-accordion>
             </li>
-            <li class="nav-item" *ngIf="nursesUserPermission">
+            <li class="nav-item">
                 <mat-accordion>
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
@@ -319,7 +319,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="emailsdashboard">דאשבורד פניות</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" *ngIf="loginUserName == 'matias'">
                                 <a class="nav-link" routerLink="publicinquiriescharts">גרפים</a>
                             </li>
                         </ul>
