--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -5,13 +5,18 @@
     <h1>{{Dept_Name}}</h1>
 </div>
 <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
-    <h2><b>{{firstname}} {{lastname}}</b></h2>
+    <div class="col-4">
+        
+    </div>
+    <div class="col-4">
+        <h2><b>{{firstname}} {{lastname}}</b></h2>
+    </div>
+    <div class="col-4">
+        <h6><b>{{gender}} {{dob}}</b></h6>
+    </div>
 </div>
 <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
-    <h3><b>{{gender}}</b></h3>
-    <h3><b>{{dob}}</b></h3>
-    <h3><b>{{description}}</b></h3>
-    <h3><b>{{corona}}</b></h3>
+    <h3><b>{{description}} {{corona}}</b></h3>
 </div>
 
 <div id="page-toshow" class="padding-top-0">
@@ -33,8 +38,9 @@
                 <div class="col-12">
                     <mat-form-field class="example-full-width" appearance="fill">
                         <mat-label>אבחנה</mat-label>
-                        <textarea matInput formControlName="Diagnosis" placeholder="אבחנה"></textarea>
-                      </mat-form-field>
+                        <textarea matInput style="font-family: 'Roboto';font-size: 15px;" formControlName="Diagnosis"
+                            placeholder="אבחנה"></textarea>
+                    </mat-form-field>
                 </div>
             </div>
             <div class="row" *ngIf="reportType == 'administrative'">
@@ -42,10 +48,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>נושא/מחלקה</mat-label>
-                            <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
-                                [matAutocomplete]="auto2">
+                            <input type="text" aria-label="department" style="font-family: 'Roboto';" matInput
+                                [formControl]="departmentfilter" [matAutocomplete]="auto2">
                             <mat-autocomplete #auto2="matAutocomplete">
-                                <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name">
+                                <mat-option *ngFor="let dept of filteredOptions2 | async" [value]="dept.Dept_Name"
+                                    style="font-family: 'Roboto';">
                                     {{dept.Dept_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -56,10 +63,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>קטגוריה</mat-label>
-                            <input type="text" aria-label="category" matInput [formControl]="categoryfilter"
-                                [matAutocomplete]="auto3">
+                            <input type="text" aria-label="category" style="font-family: 'Roboto';" matInput
+                                [formControl]="categoryfilter" [matAutocomplete]="auto3">
                             <mat-autocomplete #auto3="matAutocomplete">
-                                <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name">
+                                <mat-option *ngFor="let cat of filteredOptions3 | async" [value]="cat.Cat_Name"
+                                    style="font-family: 'Roboto';">
                                     {{cat.Cat_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -70,10 +78,11 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>תת קטגוריה</mat-label>
-                            <input type="text" aria-label="subcategory" matInput [formControl]="subcategoryfilter"
-                                [matAutocomplete]="auto4">
+                            <input type="text" aria-label="subcategory" style="font-family: 'Roboto';" matInput
+                                [formControl]="subcategoryfilter" [matAutocomplete]="auto4">
                             <mat-autocomplete #auto4="matAutocomplete">
-                                <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name">
+                                <mat-option *ngFor="let subcat of filteredOptions4 | async" [value]="subcat.SubCat_Name"
+                                    style="font-family: 'Roboto';">
                                     {{subcat.SubCat_Name}}
                                 </mat-option>
                             </mat-autocomplete>
@@ -84,8 +93,9 @@
                     <div class="form-group">
                         <mat-form-field>
                             <mat-label>סטטוס</mat-label>
-                            <mat-select formControlName="ReportStatus">
-                                <mat-option *ngFor="let st of status" [value]="st.value"> {{st.viewValue}} </mat-option>
+                            <mat-select formControlName="ReportStatus" style="font-family: 'Roboto';">
+                                <mat-option *ngFor="let st of status" [value]="st.value" style="font-family: 'Roboto';">
+                                    {{st.viewValue}} </mat-option>
                             </mat-select>
                         </mat-form-field>
                     </div>
@@ -93,7 +103,7 @@
                 <div class="col" style="align-self: center;">
                     <section class="example-section">
                         <mat-checkbox class="example-margin" formControlName="toContinue"
-                            (change)="autoDate($event.checked)">דורש
+                            (change)="autoDate($event.checked)" style="font-family: 'Roboto';">דורש
                             המשך טיפול</mat-checkbox>
                     </section>
                 </div>
@@ -112,7 +122,8 @@
                 <div class="col-9">
                     <div class="form-group">
                         <mat-form-field>
-                            <textarea matInput rows="3" placeholder="תוכן הדוח" class="form-control border-1"
+                            <textarea matInput style="font-size: 15px;font-family: 'Roboto';" rows="3"
+                                placeholder="תוכן הדוח" class="form-control border-1"
                                 formControlName="ReportText"></textarea>
                         </mat-form-field>
                     </div>
@@ -120,14 +131,14 @@
             </div>
         </div>
         <div class="modal-footer text-left">
-            <button matTooltip="שמירה" class="btn btn-outline-dark ml-4" id="BtnStyle" color="primary"
+            <button matTooltip="שמירה" class="btn btn-primary btn-raised ml-3 float-left" id="BtnStyle"
                 (click)="onSubmit()" type="submit" mat-raised-button>
                 <span class="material-icons">
                     save
                 </span>
             </button>
             <button *ngIf="reportID != '0'" matTooltip="מחיקה" id="BtnStyle" type="button" mat-raised-button
-                class="btn btn-outline-dark" color="warn" (click)="deleteReport(reportID)">
+                class="btn btn-outline-dark ml-3" color="warn" (click)="deleteReport(reportID)">
                 <span class="material-icons">
                     delete
                 </span>
@@ -203,7 +214,7 @@
                                 <div class="form-group">
                                     <mat-form-field>
                                         <input matInput formControlName="ReportStartDate" (focus)="startdate.open()"
-                                            autocomplete="off" placeholder="מ תאריך" required name="startdate"
+                                            autocomplete="off" placeholder="מ תאריך" name="startdate"
                                             [matDatepicker]="startdate" />
                                         <mat-datepicker-toggle matSuffix [for]="startdate"></mat-datepicker-toggle>
                                         <mat-datepicker #startdate></mat-datepicker>
